Fixed sizing in about page, fixed titles to align across all pages

--- a/CSS/about_css.css
+++ b/CSS/about_css.css
@@ -6,7 +6,10 @@ body{
   height: 100vh;
   width: 100vw;
   padding: 0;
+}
 
+.row .col.s12{
+  padding: 0;
 }
 
 .logo{
